src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/classConstructorContainsFuncCall.wacc
# call function within class contructor

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class A { int i }
    int five() is
        return 5
    end
    A instance = new A { call five() }
end
